<resources>
    <string name="app_name">PSPRetrofitEloquentLiga</string>
    <string name="etEstadio">Estadio</string>
    <string name="btAddEquipo">Añadir</string>
    <string name="etAforo">Aforo</string>
    <string name="etCiudad">Ciudad</string>
    <string name="etNombre">Nombre</string>
    <string name="etApellidosJ">Apellidos</string>
    <string name="btAddJugador">Añadir Jugador</string>
    <string name="action_settings">Ajustes</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="url_title">URL</string>
    <string name="messages_title">Tus ajustes</string>
</resources>
